syntax = "proto3";

package testapi.enums;

message MessageWithEnums {
  // Required.
  MyEnum required_my_enum = 1;
  // Optional.
  MyEnum optional_my_enum = 2;
  // Required.
  MyEnumWithoutUnspecified required_my_enum_without_unspecified = 3;
  // Optional.
  MyEnumWithoutUnspecified optional_my_enum_without_unspecified = 4;
  // Required.
  repeated MyEnum required_my_enums = 5;
  // Optional.
  repeated MyEnum optional_my_enums = 6;
  // Required.
  repeated MyEnumWithoutUnspecified required_my_enum_without_unspecifieds = 7;
  // Optional.
  repeated MyEnumWithoutUnspecified optional_my_enum_without_unspecifieds = 8;
}

enum MyEnum {
  MY_ENUM_UNSPECIFIED = 0;
  MY_ENUM_FOO = 1;
  // This is Bar.
  MY_ENUM_BAR = 2;
  MY_ENUM_BAZ = 3;
}


enum MyEnumWithoutUnspecified {
 MY_ENUM_WITHOUT_UNSPECIFIED_FOO = 0;
 MY_ENUM_WITHOUT_UNSPECIFIED_BAR = 1;
 MY_ENUM_WITHOUT_UNSPECIFIED_BAZ = 2;
}
